fixed screen overflow

--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,10 @@ body {
   min-width: 320px;
   min-height: 100vh;
   position: relative;
+  overflow-x: hidden;
 
-  &>#root{
+  & > #root {
     height: 100vh;
     width: 100vw;
-    
   }
 }
-
